--- a/test/linux/eepromtool/CMakeLists.txt
+++ b/test/linux/eepromtool/CMakeLists.txt
@@ -1,5 +1,5 @@
 
 set(SOURCES eepromtool.c)
 add_executable(eepromtool ${SOURCES})
-target_link_libraries(eepromtool soem)
+target_link_libraries(eepromtool ${SOEM_LIB_NAME})
 install(TARGETS eepromtool DESTINATION bin)
