--- a/test/linux/simple_test/CMakeLists.txt
+++ b/test/linux/simple_test/CMakeLists.txt
@@ -1,5 +1,10 @@
 
 set(SOURCES simple_test.c)
 add_executable(simple_test ${SOURCES})
-target_link_libraries(simple_test soem)
+if ( Xenomai_FOUND )
+    xenomai_target_bootstrap(simple_test
+        SKINS posix
+    )
+endif()
+target_link_libraries(simple_test PRIVATE ${SOEM_LIB_NAME})
 install(TARGETS simple_test DESTINATION bin)
