--- a/test/linux/slaveinfo/CMakeLists.txt
+++ b/test/linux/slaveinfo/CMakeLists.txt
@@ -1,5 +1,10 @@
 
 set(SOURCES slaveinfo.c)
 add_executable(slaveinfo ${SOURCES})
-target_link_libraries(slaveinfo soem)
+if ( Xenomai_FOUND )
+    xenomai_target_bootstrap(slaveinfo
+        SKINS posix
+    )
+endif()
+target_link_libraries(slaveinfo PRIVATE ${SOEM_LIB_NAME})
 install(TARGETS slaveinfo DESTINATION bin)
