--- a/test/simple_ng/CMakeLists.txt
+++ b/test/simple_ng/CMakeLists.txt
@@ -1,4 +1,9 @@
 set(SOURCES simple_ng.c)
 add_executable(simple_ng ${SOURCES})
-target_link_libraries(simple_ng soem)
+if ( Xenomai_FOUND )
+    xenomai_target_bootstrap(simple_test
+        SKINS posix
+    )
+endif()
+target_link_libraries(simple_ng PRIVATE ${SOEM_LIB_NAME})
 install(TARGETS simple_ng DESTINATION bin)
